Fix the alpha index with many character from overlapping the table header.

--- a/assets/css/cn-admin.css
+++ b/assets/css/cn-admin.css
@@ -16,6 +16,10 @@
 /*------------------------------------------------------------------------------
   Manage page.
 ------------------------------------------------------------------------------*/
+.tablenav .tablenav-pages a.cn-char {
+	margin-bottom: 6px;
+}
+
 .tablenav .tablenav-pages .cn-char-current {
 	padding: 8px;
 }
